--- a/src/Plugins/Widgets.Slider/Widgets.Slider.csproj
+++ b/src/Plugins/Widgets.Slider/Widgets.Slider.csproj
@@ -20,6 +20,10 @@
 	</Target>
 
 	<ItemGroup>
+	  <None Remove="Assets\slider\sample-images\banner1.png~RF8f716f.TMP" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\Business\Grand.Business.Core\Grand.Business.Core.csproj">
 			<Private>false</Private>
 		</ProjectReference>
